FFWS-48: wrap regional activity button text and and fix space around grant numbers on mobile

--- a/src/fleming-theme/templates/page-types/page-regions-countries.scss
+++ b/src/fleming-theme/templates/page-types/page-regions-countries.scss
@@ -81,7 +81,6 @@
       display: flex;
       flex-direction: row;
       width: 100%;
-      justify-content: space-between;
       padding-top: 0.5em;
 
       .statistic-item {
@@ -96,6 +95,7 @@
 
         .grant-label {
           font-size: 1.2em;
+          text-align: center;
         }
       }
     }
@@ -104,6 +104,9 @@
       @extend .button;
       margin-top: 0;
       border: 0;
+      white-space: normal;
+      min-height: 1em;
+      height: auto;
 
       &::after {
         content: ">";
@@ -156,6 +159,10 @@
     height: 200px !important;
     height: 30vh !important;
   }
+
+  #region-cards .grant-statistics {
+    justify-content: space-around;
+  }
 }
 
 @media (#{$min-width-tablet}) {
@@ -172,6 +179,16 @@
       &.inactive {
         opacity: 0.4;
       }
+    }
+  }
+
+  body {
+    &.light #region-cards .grant-statistics {
+      justify-content: space-around;
+    }
+
+    #region-cards .grant-statistics {
+      justify-content: space-between;
     }
   }
 
